more Monad improvements