@@ -20,8 +20,8 @@ public class MonadTest {
 
 	@Test
 	public void test() {
-		val list = MonadWrapper.<List<Integer>,Stream>of(Stream.of(Arrays.asList(1,3)))
-				.flatMap(Collection::stream).<Stream<Integer>>unwrap()
+		val list = MonadWrapper.<List<Integer>,Stream<Integer>>of(Stream.of(Arrays.asList(1,3)))
+				.flatMap(Collection::stream).unwrap()
 				.map(i->i*2)
 				.peek(System.out::println)
 				.collect(Collectors.toList());
@@ -29,12 +29,38 @@ public class MonadTest {
 	}
 	@Test
 	public void testMixed() {
-		val list = MonadWrapper.<List<Integer>,Stream>of(Stream.of(Arrays.asList(1,3)))
-				.bind(Optional::of).<Stream<List<Integer>>>unwrap()
+		
+		List<Integer> list = MonadWrapper.<List<Integer>,Stream<Integer>>of(Stream.of(Arrays.asList(1,3),null))
+				.bind(Optional::ofNullable)
 				.map(i->i.size())
 				.peek(System.out::println)
-				.collect(Collectors.toList());
+				.toList();
 		assertThat(Arrays.asList(2),equalTo(list));
+	}
+	@Test
+	public void testCycle(){
+		assertThat(MonadWrapper.<Integer,Stream<Integer>>of(Stream.of(1,2,2))
+											.cycle(3).collect(Collectors.toList()),equalTo(Arrays.asList(1,2,2,1,2,2,1,2,2)));
+	}
+	@Test
+	public void testJoin(){
+		assertThat(MonadWrapper.<Integer,Stream<Integer>>of(Stream.of(1,2,2)).map(b-> Stream.of(b)).flatten().toList(),equalTo(Arrays.asList(1,2,2)));
+	}
+	@Test
+	public void testToSet(){
+		assertThat(MonadWrapper.<Integer,Stream<Integer>>of(Stream.of(1,2,2)).toSet().size(),equalTo(2));
+	}
+	@Test
+	public void testToList(){
+		assertThat(MonadWrapper.<Integer,Stream<Integer>>of(Stream.of(1,2,3)).toList(),equalTo(Arrays.asList(1,2,3)));
+	}
+	@Test
+	public void testToListFlatten(){
+		assertThat(MonadWrapper.<Integer,Stream<Integer>>of(Stream.of(1,2,3,null)).bind(Optional::ofNullable).toList(),equalTo(Arrays.asList(1,2,3)));
+	}
+	@Test
+	public void testToListOptional(){
+		assertThat(MonadWrapper.<Integer,Stream<Integer>>of(Optional.of(1)).toList(),equalTo(Arrays.asList(1)));
 	}
 	
 	
